<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:verticalScrollbarPosition="right"
        tools:context="com.example.android.orderCoffee.MainActivity">
        <!-- Ввод имени -->

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/you_name"
            android:inputType="textMultiLine"
            android:focusableInTouchMode="true"/>
        <!--END: Ввод имени -->
        <!-- Область топингов -->
        <TextView
            android:id="@+id/topping"
            style="@style/TitleFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_name"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp"
            android:text="@string/toppings" />

        <LinearLayout
            android:id="@+id/AreaBox_topping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/topping"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="false"
                android:text="@string/ChB_cream" />

            <CheckBox
                android:id="@+id/marshmallow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="false"
                android:text="@string/ChB_marshmallow" />

            <CheckBox
                android:id="@+id/syrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="false"
                android:text="@string/ChB_syrup" />


        </LinearLayout>
        <!--END_Область топингов -->


        <!-- Область изминения количества coffees -->
        <TextView
            android:id="@+id/textView"
            style="@style/TitleFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/AreaBox_topping"
            android:layout_centerHorizontal="true"
            android:paddingTop="15dp"
            android:text="@string/quantity" />

        <LinearLayout
            android:id="@+id/quantityLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/buttonDecrement"
                style="@style/ButtonFont"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:onClick="decrement"
                android:text="@string/decrement" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/Values"
                android:textColor="#000000"
                android:textSize="40sp" />

            <Button
                android:id="@+id/buttonIncrement"
                style="@style/ButtonFont"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:onClick="increment"
                android:text="@string/increment"/>
        </LinearLayout>
        <!-- END: Область изминения количества coffees -->

        <!-- Область чека -->
        <TextView
            android:id="@+id/order_summary_text_view"
            style="@style/TitleFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quantityLayout"
            android:layout_centerHorizontal="true"
            android:paddingTop="8dp"
            android:text="" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_summary_text_view"
            android:layout_centerHorizontal="true"
            android:paddingTop="5dp"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button"
            style="@style/ButtonFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/price_text_view"
            android:onClick="submitOrder"
            android:text="@string/order" />
        <!--END: Область чека -->
    </RelativeLayout>
</ScrollView>